--- a/src/App/app.scss
+++ b/src/App/app.scss
@@ -21,10 +21,17 @@
     }
   }
 
+  @media (max-width: 768px) {
+    &-content_large-header,
+    &-content_small-header {
+      margin-top: 90px;
+    }
+  }
+
   @media (max-width: 600px) {
     &-content_large-header,
     &-content_small-header {
-      margin-top: 80px;
+      margin-top: 90px;
       margin-bottom: 60px;
       padding: 16px;
     }
